--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -9,6 +9,8 @@ Licence URI: https://www.os-templates.com/template-terms
 File: Framework CSS
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
+
 html{overflow-y:scroll; overflow-x:hidden;}
 html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
 
@@ -64,8 +66,8 @@ img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; l
 
 /* Fonts
 --------------------------------------------------------------------------------------------------------------- */
-body, input, textarea, select{font-family:Verdana, Geneva, sans-serif;}
-h1, h2, h3, h4, h5, h6, .heading{font-family:Georgia, "Times New Roman", Times, serif;}
+body, input, textarea, select{font-family:Poppins, sans-serif;}
+h1, h2, h3, h4, h5, h6, .heading{font-family:Poppins, sans-serif;}
 
 
 /* Forms
